--- a/LeaguePredictions.ipynb
+++ b/LeaguePredictions.ipynb
@@ -30,102 +30,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
+    "def get_all_players_info(year):\n",
     "\n",
-    "all_players_info = pd.read_sql_query(\"\"\"select  p.player_name,pa2.* from player_attributes pa2, player p where p.player_api_id = pa2.player_api_id and\n",
-    "(pa2.player_api_id, pa2.date) in (\n",
-    "select z.player_api_id, z.date from (\n",
-    "select pa.player_api_id, pa.date, min(abs(strftime('%s',pa.date) - strftime('%s','2014-09-01 00:00:00'))) from player_attributes pa, player p \n",
-    "                                where pa.player_api_id = p.player_api_id\n",
-    "                                and strftime('%s',pa.date) > strftime('%s','2014-05-14 00:00:00') \n",
-    "                                and pa.date like '2014 %'\n",
-    "                                group by pa.player_api_id ) z )\"\"\",conn)\n"
+    "    \n",
+    "    query_str = \"\"\"select  p.player_name,pa2.* from player_attributes pa2, player p where p.player_api_id = pa2.player_api_id and\n",
+    "    (pa2.player_api_id, pa2.date) in (\n",
+    "    select z.player_api_id, z.date from (\n",
+    "    select pa.player_api_id, pa.date, min(abs(strftime('%%s',pa.date) - strftime('%%s','%(year)s-09-01 00:00:00'))) from player_attributes pa, player p \n",
+    "                                    where pa.player_api_id = p.player_api_id\n",
+    "                                    and strftime('%%s',pa.date) > strftime('%%s','2014-05-14 00:00:00') \n",
+    "                                    and pa.date like '%(year)s%%'\n",
+    "                                    group by pa.player_api_id ) z )\"\"\"%{'year':year}\n",
+    "    \n",
+    "    all_player_attrs = pd.read_sql_query(query_str,conn)\n",
+    "    \n",
+    "    return all_player_attrs\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 139,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Leighton Baines    82.0\n",
-      "Seamus Coleman     79.0\n",
-      "Antolin Alcaraz    74.0\n",
-      "John Stones        73.0\n",
-      "Gareth Barry       80.0\n",
-      "Aaron Lennon       79.0\n",
-      "James McCarthy     79.0\n",
-      "Samuel Eto'o       81.0\n",
-      "Kevin Mirallas     80.0\n",
-      "Romelu Lukaku      80.0\n",
-      "Tim Howard         82.0\n",
-      "Name: overall_rating, dtype: float64\n",
-      "     Position             id  player_fifa_api_id  player_api_id  \\\n",
-      "0    Defender  106162.200000       140524.800000   81878.000000   \n",
-      "1     Forward  135408.333333       124785.333333   80355.333333   \n",
-      "2  Midfielder   45849.333333       115942.000000   51956.333333   \n",
-      "\n",
-      "   overall_rating  potential   crossing  finishing  heading_accuracy  \\\n",
-      "0       78.000000  80.800000  59.200000  45.600000         61.800000   \n",
-      "1       80.333333  82.666667  73.000000  81.000000         72.666667   \n",
-      "2       79.333333  80.666667  75.666667  64.333333         54.666667   \n",
-      "\n",
-      "   short_passing          ...            Min/goal  Assists  % Assists  \\\n",
-      "0           66.2          ...                 NaN      9.0       20.0   \n",
-      "1           73.0          ...               245.5      NaN        NaN   \n",
-      "2           82.0          ...                 NaN      NaN        NaN   \n",
-      "\n",
-      "   Recipient Goals   CS  Hat Tricks  Yelow - Minutes Played  Sent Off  \\\n",
-      "0              2.0  7.0         NaN             2249.000000       1.0   \n",
-      "1              NaN  NaN         NaN             1694.000000       NaN   \n",
-      "2              NaN  NaN         NaN             2192.666667       1.0   \n",
-      "\n",
-      "   Red - Minutes Played  Minutes per Red Cards  \n",
-      "0                 526.0                  526.0  \n",
-      "1                   NaN                    NaN  \n",
-      "2                2827.0                 2827.0  \n",
-      "\n",
-      "[3 rows x 57 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "year_data = {'2014': 'statbunker-football-stats/Player Stats 2014-15.csv' , \n",
     "             '2015': 'statbunker-football-stats/Player Stats 2015-16.csv' ,\n",
-    "             '2016': 'statbunker-football-stats/Player Stats 2016-17.csv'}\n",
-    "\n",
-    "#ptm = pd.read_csv('statbunker-football-stats/Player Stats 2014-15.csv', )\n",
-    "\n",
-    "\n",
-    "# #caller.set_index('key').join(other.set_index('key'))\n",
-    "# joined = all_players_info.set_index('player_name').join(ptm.set_index('Player'), how='inner')\n",
-    "\n",
-    "\n",
-    "\n",
-    "def agg_attributes(team):\n",
-    "    #team[team['Position'] == 'Goalkeeper']['Position'] = 'Defender'\n",
-    "    \n",
-    "    team.loc[lambda df: df['Position'] == 'Goalkeeper', 'Position'] = 'Defender'\n",
-    "       \n",
-    "    print(team['overall_rating'])\n",
-    "    g = team.groupby(['Position'] , as_index=False)\n",
-    "    print(g.mean())\n",
+    "             '2016': 'statbunker-football-stats/Player Stats 2016-17.csv'}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "def create_team( name, year):\n",
     "    \n",
     "    ptm = pd.read_csv(year_data[year] , dtype = {'overall_rating':float} )\n",
     "   \n",
     "    ptm = ptm[(ptm['Type Of Goal'] == 'Player') & (ptm['League'] == 'Premier League')]\n",
+    "    \n",
+    "    all_players_info  = get_all_players_info(year)\n",
+    "    \n",
     "    joined = all_players_info.set_index('player_name').join(ptm.set_index('Player'), how='inner')\n",
-    "    full_team = joined[joined['Team'] == name]\n",
+    "    full_team = joined[joined['Team'].str.startswith(name)]\n",
     "        \n",
     "    pos_sel = {'Defender': 4, 'Midfielder': 3, 'Forward': 3, 'Goalkeeper':1}\n",
     "    team_agg = {}\n",
@@ -141,11 +96,174 @@
     "        avg = grp.mean()\n",
     "        team_agg[key] = avg\n",
     "    \n",
-    "    return df_start\n",
-    "    \n",
-    "start11 = create_team('Everton', '2014')\n",
+    "    return df_start"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 222,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
-    "agg_attributes(start11)\n"
+    "def agg_attributes(team):\n",
+    "    #team[team['Position'] == 'Goalkeeper']['Position'] = 'Defender'\n",
+    "    \n",
+    "    team.loc[lambda df: df['Position'] == 'Goalkeeper', 'Position'] = 'Defender'\n",
+    "       \n",
+    "    \n",
+    "    g = team.groupby(['Position'] , as_index=False).mean()\n",
+    "    #print(g['overall_rating'])\n",
+    "    #g = g.reset_index().set_index('index')\n",
+    "    \n",
+    "    return g.transpose()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 223,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_fixtures(year):\n",
+    "    \n",
+    "    f = pd.read_csv('epl-results-19932018/EPL_Set.csv')\n",
+    "    return f[f['Season'] == year]\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 241,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Div                     E0\n",
+      "Date              16/08/14\n",
+      "HomeTeam           Arsenal\n",
+      "AwayTeam    Crystal Palace\n",
+      "FTHG                     2\n",
+      "FTAG                     1\n",
+      "FTR                      H\n",
+      "HTHG                     1\n",
+      "HTAG                     1\n",
+      "HTR                      D\n",
+      "Season             2014-15\n",
+      "Name: 8144, dtype: object\n",
+      "{'Def_Score': 7.400000000000006, 'Mid_Score': 8.333333333333343, 'Att_Score': 7.333333333333329, 'Result': 1}\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "If using all scalar values, you must pass an index",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-241-dfa5aab5c1ce>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     30\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     31\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnorm_attrs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 32\u001b[1;33m     \u001b[0mnorm_df\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfrom_dict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnorm_attrs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0morient\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'columns'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     33\u001b[0m     \u001b[0mres_df\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mres_df\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnorm_df\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     34\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mD:\\Apps\\Anaconda3\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36mfrom_dict\u001b[1;34m(cls, data, orient, dtype)\u001b[0m\n\u001b[0;32m    898\u001b[0m             \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'only recognize index or columns for orient'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    899\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 900\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mcls\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    901\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    902\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mto_dict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0morient\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'dict'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minto\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdict\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mD:\\Apps\\Anaconda3\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, data, index, columns, dtype, copy)\u001b[0m\n\u001b[0;32m    328\u001b[0m                                  dtype=dtype, copy=copy)\n\u001b[0;32m    329\u001b[0m         \u001b[1;32melif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdict\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 330\u001b[1;33m             \u001b[0mmgr\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_init_dict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    331\u001b[0m         \u001b[1;32melif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mma\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mMaskedArray\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    332\u001b[0m             \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mma\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmrecords\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mmrecords\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mD:\\Apps\\Anaconda3\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m_init_dict\u001b[1;34m(self, data, index, columns, dtype)\u001b[0m\n\u001b[0;32m    459\u001b[0m             \u001b[0marrays\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mk\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mkeys\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    460\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 461\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0m_arrays_to_mgr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marrays\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdata_names\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    462\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    463\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m_init_ndarray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalues\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mD:\\Apps\\Anaconda3\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m_arrays_to_mgr\u001b[1;34m(arrays, arr_names, index, columns, dtype)\u001b[0m\n\u001b[0;32m   6161\u001b[0m     \u001b[1;31m# figure out the index, if necessary\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   6162\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mindex\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 6163\u001b[1;33m         \u001b[0mindex\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mextract_index\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marrays\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   6164\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   6165\u001b[0m         \u001b[0mindex\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_ensure_index\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mD:\\Apps\\Anaconda3\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36mextract_index\u001b[1;34m(data)\u001b[0m\n\u001b[0;32m   6200\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   6201\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mindexes\u001b[0m \u001b[1;32mand\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mraw_lengths\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 6202\u001b[1;33m             raise ValueError('If using all scalar values, you must pass'\n\u001b[0m\u001b[0;32m   6203\u001b[0m                              ' an index')\n\u001b[0;32m   6204\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: If using all scalar values, you must pass an index"
+     ]
+    }
+   ],
+   "source": [
+    "# team = create_team('Liverpool','2014')\n",
+    "\n",
+    "# team_attrs = agg_attributes(team)\n",
+    "# team_attrs.columns = ['Defense','Attack','Midfield']\n",
+    "# team_attrs\n",
+    "\n",
+    "team = create_team('Leicester','2014')\n",
+    "\n",
+    "f = get_fixtures('2014-15').head(10)\n",
+    "\n",
+    "\n",
+    "res_df = pd.DataFrame()\n",
+    "\n",
+    "for key,row in f.iterrows():\n",
+    "    home = row['HomeTeam']\n",
+    "    away = row['AwayTeam']\n",
+    "    #print(home,away)\n",
+    "    home_team = create_team(home,'2014')\n",
+    "    away_team = create_team(away,'2014')\n",
+    "    home_attrs = agg_attributes(home_team)\n",
+    "    away_attrs = agg_attributes(away_team)\n",
+    "    \n",
+    "    \n",
+    "    norm_attrs = {}\n",
+    "    norm_attrs['Def_Score'] = home_attrs[0]['overall_rating'] - away_attrs[1]['overall_rating']\n",
+    "    norm_attrs['Mid_Score'] = home_attrs[2]['overall_rating'] - away_attrs[2]['overall_rating']\n",
+    "    norm_attrs['Att_Score'] = home_attrs[1]['overall_rating'] - away_attrs[0]['overall_rating']\n",
+    "    norm_attrs['Result'] = 1 if row['FTHG'] - row['FTAG'] > 0  else (-1 if row['FTHG'] - row['FTAG'] < 0 else 0)\n",
+    "    \n",
+    "    print(row)\n",
+    "    print(norm_attrs)\n",
+    "    norm_df = pd.DataFrame.from_dict(norm_attrs, orient='index')\n",
+    "    res_df = res_df.append(norm_df)\n",
+    "    \n",
+    "    print(home_attrs[0]['overall_rating'])\n",
+    "    \n",
+    "    #print(home_attrs[home_attrs['index'] == 'overall_rating'])\n",
+    "    \n",
+    "    #print(len(home_team),len(away_team))\n",
+    "    \n",
+    "   # print(row)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 242,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: []\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 242,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res_df"
    ]
   },
   {
