added form calculation

--- a/LeaguePredictions_feats.ipynb
+++ b/LeaguePredictions_feats.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 326,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 327,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 328,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 329,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,22 +134,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 330,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def norm_player_names(all_players_info):\n",
+    "def norm_team_names(team_info):\n",
     "    \n",
     "    for key,value in norm_team_name.items():\n",
-    "        all_players_info.loc[lambda df: df['HomeTeam'] == key, 'HomeTeam'] = value\n",
-    "        all_players_info.loc[lambda df: df['AwayTeam'] == key, 'AwayTeam'] = value\n",
+    "        team_info.loc[lambda df: df['HomeTeam'] == key, 'HomeTeam'] = value\n",
+    "        team_info.loc[lambda df: df['AwayTeam'] == key, 'AwayTeam'] = value\n",
     "    \n",
-    "    return all_players_info"
+    "    return team_info"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 331,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 332,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,29 +177,30 @@
     "    \n",
     "    team_df = {}\n",
     "    \n",
-    "    df_start = full_team[full_team['Team'] == 'THIS DOES NOT EXIST']\n",
+    "    return full_team\n",
+    "#     df_start = full_team[full_team['Team'] == 'THIS DOES NOT EXIST']\n",
     "    \n",
-    "    pos_sel = {'Defender': 4, 'Midfielder': 4, 'Forward': 2, 'Goalkeeper':1}\n",
+    "#     pos_sel = {'Defender': 4, 'Midfielder': 4, 'Forward': 2, 'Goalkeeper':1}\n",
     "\n",
-    "#     if (len(df_start[df_start['Position'] == 'Forward']) < 3 ):\n",
-    "#         forwards = len(df_start[df_start['Position'] == 'Forward'])\n",
-    "#         print(forwards)\n",
-    "#         pos_sel['Forward'] = forwards\n",
-    "#         pos_sel['Midfielder'] = 6 - forwards\n",
+    "# #     if (len(df_start[df_start['Position'] == 'Forward']) < 3 ):\n",
+    "# #         forwards = len(df_start[df_start['Position'] == 'Forward'])\n",
+    "# #         print(forwards)\n",
+    "# #         pos_sel['Forward'] = forwards\n",
+    "# #         pos_sel['Midfielder'] = 6 - forwards\n",
     "\n",
-    "    for key,value in pos_sel.items():\n",
+    "#     for key,value in pos_sel.items():\n",
     "        \n",
-    "        grp = full_team[full_team['Position'] == key].sort_values(by = ['overall_rating'], ascending = False).head(value)\n",
-    "        df_start = df_start.append(grp)\n",
-    "        avg = grp.mean()\n",
-    "        team_agg[key] = avg\n",
+    "#         grp = full_team[full_team['Position'] == key].sort_values(by = ['overall_rating'], ascending = False).head(value)\n",
+    "#         df_start = df_start.append(grp)\n",
+    "#         avg = grp.mean()\n",
+    "#         team_agg[key] = avg\n",
     "    \n",
-    "    return df_start"
+    "#     return df_start"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 333,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 334,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,12 +242,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 335,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def combine_metrics_4(i,row,home_attrs,away_attrs):\n",
+    "def combine_metrics_4(i,row,home_attrs,away_attrs,team_form):\n",
     "   \n",
+    "    def update_form(home_team_name, away_team_name, result):\n",
+    "        if result == 1:\n",
+    "            team_form[home_team_name] += 2\n",
+    "            team_form[away_team_name] -= 2\n",
+    "        elif result == -1:\n",
+    "            team_form[home_team_name] -= 3\n",
+    "            team_form[away_team_name] += 3\n",
+    "        else:\n",
+    "            team_form[home_team_name] -= 1\n",
+    "            team_form[away_team_name] += 1\n",
+    "        \n",
     "    norm_attrs = {}\n",
     "    \n",
     "    for key in home_attrs.keys():\n",
@@ -259,6 +271,10 @@
     "    norm_attrs['Game_Week'] = (i//10) + 1\n",
     "    norm_attrs['FTHG'] = row['FTHG']\n",
     "    norm_attrs['FTAG'] = row['FTAG']\n",
+    "    norm_attrs['Home_Form'] = team_form[row['HomeTeam']]\n",
+    "    norm_attrs['Away_Form'] = team_form[row['AwayTeam']]\n",
+    "                                        \n",
+    "    update_form(row['HomeTeam'],row['AwayTeam'],norm_attrs['Result'])\n",
     "    \n",
     "    norm_df = pd.DataFrame(norm_attrs, index = [str(i)])\n",
     "    \n",
@@ -267,16 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "team_state = {}\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 336,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 337,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,15 +322,16 @@
     "        i = 0\n",
     "        res_df = pd.DataFrame()\n",
     "        f = get_fixtures(year)\n",
+    "    \n",
+    "        team_form = {name:60 for name in f['HomeTeam'].unique()}\n",
     "        for key,row in f.iterrows():\n",
-    "        #     print(\"MATCHING UP: %s vs %s\"%(row['HomeTeam'], row['AwayTeam']))\n",
     "            home = row['HomeTeam']\n",
     "            away = row['AwayTeam']\n",
     "\n",
     "            home_attrs = team_store[home][1]\n",
     "            away_attrs = team_store[away][1]\n",
     "\n",
-    "            res_df = res_df.append(combine_metrics_4(i,row,home_attrs,away_attrs))\n",
+    "            res_df = res_df.append(combine_metrics_4(i,row,home_attrs,away_attrs,team_form))\n",
     "\n",
     "            i = i + 1\n",
     "        \n",
@@ -334,16 +342,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 339,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tr_data = construct_training_data(['2014'])\n"
+    "tr_data = construct_training_data(['2014','2015','2016'])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 340,
    "metadata": {},
    "outputs": [],
    "source": [
