making changes to feats

--- a/LeaguePredictions_feats_2.ipynb
+++ b/LeaguePredictions_feats_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,32 +46,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import unidecode as ud\n",
-    "import json\n",
+    "# import unidecode as ud\n",
+    "# import json\n",
     "\n",
-    "player_pos = json.load(open('player_pos_14.json','r'))\n",
-    "player_pos_dec = {ud.unidecode(key):value for (key,value) in player_pos.items()}\n",
-    "print(len(player_pos))\n",
-    "print(len(player_pos_dec))\n",
+    "# player_pos = json.load(open('player_pos_14.json','r'))\n",
+    "# player_pos_dec = {ud.unidecode(key):value for (key,value) in player_pos.items()}\n",
+    "# print(len(player_pos))\n",
+    "# print(len(player_pos_dec))\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,21 +129,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def create_team(data, name):\n",
     "    \n",
     "    full_team = data[data['Club'].str.startswith(name)]\n",
+    "    \n",
+    "    return full_team\n",
     "        \n",
-    "    team_agg = {}\n",
+    "#     team_agg = {}\n",
     "    \n",
-    "    team_df = {}\n",
+    "#     team_df = {}\n",
     "    \n",
-    "    df_start = full_team[full_team['Team'] == 'THIS DOES NOT EXIST']\n",
+    "#     df_start = full_team[full_team['Team'] == 'THIS DOES NOT EXIST']\n",
     "    \n",
-    "    pos_sel = {'Defender': 4, 'Midfielder': 4, 'Forward': 2, 'Goalkeeper':1}\n",
+    "#     pos_sel = {'Defender': 4, 'Midfielder': 4, 'Forward': 2, 'Goalkeeper':1}\n",
     "\n",
     "#     if (len(df_start[df_start['Position'] == 'Forward']) < 3 ):\n",
     "#         forwards = len(df_start[df_start['Position'] == 'Forward'])\n",
@@ -160,19 +153,19 @@
     "#         pos_sel['Forward'] = forwards\n",
     "#         pos_sel['Midfielder'] = 6 - forwards\n",
     "\n",
-    "    for key,value in pos_sel.items():\n",
+    "#     for key,value in pos_sel.items():\n",
     "        \n",
-    "        grp = full_team[full_team['Position'] == key].sort_values(by = ['overall_rating'], ascending = False).head(value)\n",
-    "        df_start = df_start.append(grp)\n",
-    "        avg = grp.mean()\n",
-    "        team_agg[key] = avg\n",
+    "#         grp = full_team[full_team['Position'] == key].sort_values(by = ['overall_rating'], ascending = False).head(value)\n",
+    "#         df_start = df_start.append(grp)\n",
+    "#         avg = grp.mean()\n",
+    "#         team_agg[key] = avg\n",
     "    \n",
-    "    return df_start"
+    "#     return df_start"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,12 +220,12 @@
     "        norm_attrs['h_'+key] = float(home_attrs[key])\n",
     "        norm_attrs['a_'+key] = float(away_attrs[key])\n",
     "    \n",
-    "    norm_attrs['Home_Team'] = row['HomeTeam']\n",
-    "    norm_attrs['Away_Team'] = row['AwayTeam']\n",
-    "    norm_attrs['Result'] = 1 if row['FTHG'] - row['FTAG'] > 0  else (-1 if row['FTHG'] - row['FTAG'] < 0 else 0)\n",
+    "    norm_attrs['Home_Team'] = row['Home Team']\n",
+    "    norm_attrs['Away_Team'] = row['Away Team']\n",
+    "#     norm_attrs['Result'] = 1 if row['FTHG'] - row['FTAG'] > 0  else (-1 if row['FTHG'] - row['FTAG'] < 0 else 0)\n",
     "    norm_attrs['Game_Week'] = (i//10) + 1\n",
-    "    norm_attrs['FTHG'] = row['FTHG']\n",
-    "    norm_attrs['FTAG'] = row['FTAG']\n",
+    "#     norm_attrs['FTHG'] = row['FTHG']\n",
+    "#     norm_attrs['FTAG'] = row['FTAG']\n",
     "    \n",
     "    norm_df = pd.DataFrame(norm_attrs, index = [str(i)])\n",
     "    \n",
@@ -241,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +254,7 @@
     "    joined_data = get_full_data(year)\n",
     "\n",
     "    f = get_fixtures(year)\n",
-    "    teams = f['HomeTeam'].unique() #get all unique teams\n",
+    "    teams = f['Home Team'].unique() #get all unique teams\n",
     "\n",
     "    for team in teams:\n",
     "        team_data = create_team(joined_data, team)\n",
@@ -272,11 +265,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "def construct_training_data(years):\n",
     "    \n",
     "    full_res_df = pd.DataFrame()\n",
@@ -289,8 +281,8 @@
     "        f = get_fixtures(year)\n",
     "        for key,row in f.iterrows():\n",
     "        #     print(\"MATCHING UP: %s vs %s\"%(row['HomeTeam'], row['AwayTeam']))\n",
-    "            home = row['HomeTeam']\n",
-    "            away = row['AwayTeam']\n",
+    "            home = row['Home Team']\n",
+    "            away = row['Away Team']\n",
     "\n",
     "            home_attrs = team_store[home][1]\n",
     "            away_attrs = team_store[away][1]\n",
@@ -306,16 +298,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.7/site-packages/ipykernel_launcher.py:7: DtypeWarning: Columns (66) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  import sys\n"
+     ]
+    }
+   ],
    "source": [
     "tr_data = construct_training_data(['2018'])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
