Generating Testing Data

--- a/LeaguePredictions_feats_2.ipynb
+++ b/LeaguePredictions_feats_2.ipynb
@@ -316,12 +316,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tr_data.to_csv('Full_Data_feats_ha.csv')"
+    "tr_data.to_csv('Full_Data_feats_haha.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
