Consolidated exploratory code and final

--- a/Exploratory_Analyis/Models.ipynb
+++ b/Exploratory_Analyis/Models.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score, mean_squared_error\n",
     "\n",
     "\n",
     "#Finding misclassifications\n",
@@ -27,38 +28,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "x_cols = ['Away_Att','Away_Def','Away_Mid','Home_Att','Home_Mid','Home_Def','Home_Form','Away_Form']\n",
     "x_diff_cols = ['Att_Score','Def_Score','Mid_Score']\n",
     "y_cols = ['Result']\n",
+    "y_regression_cols = ['Goal_Diff']\n",
     "\n",
     "\n",
     "\n",
     "\n",
-    "full_data = pd.read_csv('Diff_Form_Total.csv' )\n",
-    "\n"
+    "full_data = pd.read_csv('Full_Data_Form.csv' )\n",
+    "full_data['Goal_Diff'] = full_data['FTHG'] - full_data['FTAG']\n",
+    "print(full_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_all = full_data[x_diff_cols + ['Total']]\n",
-    "y_all = full_data[y_cols]\n"
+    "x_all = full_data[x_cols]\n",
+    "y_all = full_data[y_regression_cols + ['Result']]\n",
+    "print(y_all)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_train,x_test,y_train,y_test = train_test_split(x_all, y_all, test_size = 0.50, stratify = y_all, random_state = 3)\n"
+    "x_train,x_test,y_train,y_test = train_test_split(x_all, y_all, test_size = 0.33, random_state = 42)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.4509283819628647\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Training linear regression on the goal difference \n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "import math\n",
+    "lr = LinearRegression()\n",
+    "lr.fit(x_train,y_train['Goal_Diff'])\n",
+    "y_pred = lr.predict(x_test[x_cols])\n",
+    "goals = [math.ceil(value) for value in y_pred]\n",
+    "\n",
+    "pred_res = [1 if value > 0 else (-1 if value < 0 else 0) for value in goals]\n",
+    "z = accuracy_score(y_test['Result'],pred_res)\n",
+    "print(z)"
    ]
   },
   {
@@ -69,7 +100,6 @@
    "source": [
     "#Train SVM\n",
     "from sklearn.svm import LinearSVC, SVC\n",
-    "from sklearn.metrics import accuracy_score\n",
     "\n",
     "svm = SVC(C = 0.1, kernel = 'linear')\n",
     "svm.fit(x_train,y_train)\n",
@@ -77,9 +107,7 @@
     "# print(svm.intercept_)\n",
     "y_pred = svm.predict(x_test)\n",
     "z =accuracy_score(y_test,y_pred)\n",
-    "print(z)\n",
     "\n",
-    "print(y_pred)\n",
     "#mc = misclassification_report(full_data,y_pred,y_test)\n",
     "#print(mc[x_cols + y_cols + ['Predicted']])\n"
    ]
