--- a/Exploratory_Analyis/Preprocessing_fieldpos.ipynb
+++ b/Exploratory_Analyis/Preprocessing_fieldpos.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,33 +12,11 @@
     "pd.set_option('display.max_columns', 500)\n",
     "pd.set_option('display.width', 1000)\n",
     "from sklearn.model_selection import train_test_split\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# #'attacking_work_rate', 'defensive_work_rate'\n",
-    "# attr_cols = ['overall_rating',\n",
-    "#        'potential', 'crossing', 'finishing', 'heading_accuracy',\n",
-    "#        'short_passing', 'volleys', 'dribbling', 'curve', 'free_kick_accuracy',\n",
-    "#        'long_passing', 'ball_control', 'acceleration', 'sprint_speed',\n",
-    "#        'agility', 'reactions', 'balance', 'shot_power', 'jumping', 'stamina',\n",
-    "#        'strength', 'long_shots', 'aggression', 'interceptions', 'positioning',\n",
-    "#        'vision', 'penalties', 'marking', 'standing_tackle', 'sliding_tackle',\n",
-    "#        'gk_diving', 'gk_handling', 'gk_kicking', 'gk_positioning',\n",
-    "#        'gk_reflexes']\n",
-    "\n",
-    "attr_cols = ['crossing', 'finishing', 'heading_accuracy','short_passing', 'volleys', 'dribbling', 'free_kick_accuracy',\n",
-    "       'long_passing', 'ball_control', 'acceleration', 'sprint_speed',\n",
-    "       'agility', 'reactions', 'balance', 'shot_power', 'jumping', 'stamina',\n",
-    "       'strength', 'long_shots', 'aggression', 'interceptions', 'positioning',\n",
-    "       'vision', 'penalties', 'marking', 'standing_tackle', 'sliding_tackle',\n",
-    "       'gk_positioning','gk_reflexes']\n",
-    "\n",
-    "\n",
-    "x_cols = [   for c in ['h','a'] for attr in attr_cols ]\n",
-    "\n",
+    "x_home_cols =  [\"h_%s\"%i  for i in range(0,11)]\n",
+    "x_away_cols =  [\"a_%s\"%i  for i in range(0,11)]\n",
+    "x_diff_cols =  [\"diff_%s\"%i  for i in range(0,11)]\n",
+    "x_cols = x_home_cols + x_away_cols\n",
     "x_form_cols = ['Home_Form','Away_Form']\n",
-    "\n",
     "y_cols = ['Result']\n",
     "\n",
     "bins= [0.0,0.2,0.4,0.6,0.8,1.0]\n",
@@ -47,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +45,7 @@
     "            \n",
     "    return df    \n",
     "\n",
-    "x_norm_cols = x_attr_cols + x_form_cols\n",
+    "x_norm_cols = x_cols\n",
     "\n",
     "def normalize(df):\n",
     "    for key in df:\n",
@@ -90,30 +68,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('Full_Data_Form.csv' )\n",
+    "data = pd.read_csv('Full_Data_fieldpos_all.csv')\n",
     "\n",
     "tr_data = normalize(data)\n",
+    "#take difference and store data \n",
+    "tr_data_copy = tr_data.copy()\n",
     "\n",
-    "tr_data['Def_Score'] = tr_data['Home_Def'] - tr_data['Away_Def']\n",
-    "tr_data['Att_Score'] = tr_data['Home_Att'] - tr_data['Away_Att']\n",
-    "tr_data['Mid_Score'] = tr_data['Home_Mid'] - tr_data['Away_Mid']\n",
-    "tr_data['Form_Score'] = tr_data['Home_Form'] - tr_data['Away_Form']\n",
-    "tr_data['Total'] = tr_data['Def_Score'] + tr_data['Att_Score'] + tr_data['Mid_Score']\n",
-    "diff_df = data[x_diff_cols + ['Total'] + y_cols]\n"
+    "\n",
+    "for i in range(0,11):\n",
+    "    tr_data['diff_%s'%i] = tr_data[\"h_%s\"%i] - tr_data[\"a_%s\"%i]\n",
+    "    \n",
+    "    \n",
+    "data_diff = tr_data[x_diff_cols + y_cols]\n",
+    "\n",
+    "#data_diff.to_csv('field_pos_diff.csv')\n",
+    "#print(tr_data[x_home_cols[:3] + x_away_cols[:3] + x_diff_cols[:3] + y_cols])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(380, 10)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\Apps\\Anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:752: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "diff_df.to_csv('Diff_Form_Total.csv')"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
