--- a/Exploratory_Analyis/LeaguePredictions_feat.ipynb
+++ b/Exploratory_Analyis/LeaguePredictions_feat.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,42 +107,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
     "def create_team(data, name):\n",
     "    \n",
     "    full_team = data[data['Team'].str.startswith(name)]\n",
-    "        \n",
-    "    team_agg = {}\n",
-    "    \n",
-    "    team_df = {}\n",
-    "    \n",
-    "    return full_team\n",
-    "#     df_start = full_team[full_team['Team'] == 'THIS DOES NOT EXIST']\n",
-    "    \n",
-    "#     pos_sel = {'Defender': 4, 'Midfielder': 4, 'Forward': 2, 'Goalkeeper':1}\n",
-    "\n",
-    "# #     if (len(df_start[df_start['Position'] == 'Forward']) < 3 ):\n",
-    "# #         forwards = len(df_start[df_start['Position'] == 'Forward'])\n",
-    "# #         print(forwards)\n",
-    "# #         pos_sel['Forward'] = forwards\n",
-    "# #         pos_sel['Midfielder'] = 6 - forwards\n",
-    "\n",
-    "#     for key,value in pos_sel.items():\n",
-    "        \n",
-    "#         grp = full_team[full_team['Position'] == key].sort_values(by = ['overall_rating'], ascending = False).head(value)\n",
-    "#         df_start = df_start.append(grp)\n",
-    "#         avg = grp.mean()\n",
-    "#         team_agg[key] = avg\n",
-    "    \n",
-    "#     return df_start"
+    "    return full_team\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +131,7 @@
     "        if key.startswith('gk'):\n",
     "            agg_attrs[key] = team.sort_values(by = [key], ascending = False)[key].head(2).mean()\n",
     "        else:\n",
-    "            agg_attrs[key] = team.sort_values(by = [key], ascending = False)[key].head(10).mean()\n",
+    "            agg_attrs[key] = team.sort_values(by = [key], ascending = False)[key].head(4).mean()\n",
     "        \n",
     "    agg_attrs_df = pd.DataFrame([agg_attrs]).astype(float)\n",
     "    return agg_attrs_df\n",
@@ -170,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +171,7 @@
     "        if result == 1:\n",
     "            team_form[home_team_name] += 2\n",
     "            team_form[away_team_name] -= 2\n",
-    "        elif result == -1:\n",
+    "        elif result == 3:\n",
     "            team_form[home_team_name] -= 3\n",
     "            team_form[away_team_name] += 3\n",
     "        else:\n",
@@ -209,12 +186,12 @@
     "    \n",
     "    norm_attrs['Home_Team'] = row['HomeTeam']\n",
     "    norm_attrs['Away_Team'] = row['AwayTeam']\n",
-    "    norm_attrs['Result'] = 1 if row['FTHG'] - row['FTAG'] > 0  else (-1 if row['FTHG'] - row['FTAG'] < 0 else 0)\n",
+    "    norm_attrs['Result'] = 1 if row['FTHG'] - row['FTAG'] > 0  else (3 if row['FTHG'] - row['FTAG'] < 0 else 2)\n",
     "    norm_attrs['Game_Week'] = (i//10) + 1\n",
     "    norm_attrs['FTHG'] = row['FTHG']\n",
     "    norm_attrs['FTAG'] = row['FTAG']\n",
-    "    norm_attrs['Home_Form'] = team_form[row['HomeTeam']]\n",
-    "    norm_attrs['Away_Form'] = team_form[row['AwayTeam']]\n",
+    "    norm_attrs['h_form'] = team_form[row['HomeTeam']]\n",
+    "    norm_attrs['a_form'] = team_form[row['AwayTeam']]\n",
     "                                        \n",
     "    update_form(row['HomeTeam'],row['AwayTeam'],norm_attrs['Result'])\n",
     "    \n",
@@ -225,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,16 +259,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tr_data = construct_training_data(['2014','2015','2016'])\n"
+    "tr_data = construct_training_data(['2014','2015','2016'])\n",
+    "tr_data['h_form'] = tr_data['h_form']/100\n",
+    "tr_data['a_form'] = tr_data['a_form']/100"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
