fixed some code

--- a/Pipeline.ipynb
+++ b/Pipeline.ipynb
@@ -185,9 +185,8 @@
     "\n",
     "    model = Sequential()\n",
     "    model.add(Dense(100,input_dim = x_train.shape[1], activation = 'sigmoid'))\n",
-    "#     model.add(Dense(200, activation = 'tanh'))\n",
-    "#     model.add(Dropout(0.1))\n",
-    "#     model.add(Dense(50, activation = 'tanh'))\n",
+    "    model.add(Dense(200, activation = 'tanh'))\n",
+    "    model.add(Dropout(0.1))\n",
     "    model.add(Dense(3, activation = 'sigmoid'))\n",
     "    \n",
     "    model.compile(loss = 'binary_crossentropy', optimizer ='adam',metrics = ['accuracy'])\n",
@@ -205,11 +204,11 @@
     "\n",
     "    model = Sequential()\n",
     "    model.add(Dense(100,input_dim = x_train.shape[1], activation = 'sigmoid'))\n",
-    "    model.add(Dense(200, activation = 'sigmoid'))\n",
-    "    model.add(Dropout(0.3))\n",
+    "    model.add(Dense(200, activation = 'tanh'))\n",
+    "    model.add(Dropout(0.1))\n",
     "    model.add(Dense(3, activation = 'sigmoid'))\n",
     "    \n",
-    "    model.compile(loss = 'binary_crossentropy', optimizer ='adam',metrics = ['categorical_crossentropy'])\n",
+    "    model.compile(loss = 'binary_crossentropy', optimizer ='adam',metrics = ['accuracy'])\n",
     "\n",
     "    model.fit(x_train,y_train,epochs = 50, batch_size = 32, validation_data = val_tuple)\n",
     "    #print(model.evaluate())\n",
@@ -235,7 +234,9 @@
    "outputs": [],
    "source": [
     "model = keras_1(feats_tr_data[0],onehot(feats_tr_data[1]),(feats_val_data[0],onehot(feats_val_data[1])))\n",
-    "#inv_pred = inv_onehot(feats_pred).reshape(1,-1)[0]\n",
+    "\n",
+    "val_pred = model.predict(feats_val_data[0])\n",
+    "#inv_val_pred_1 = inv_onehot(feats_pred).reshape(1,-1)[0]\n",
     "#acc/\n"
    ]
   },
@@ -290,12 +291,20 @@
     "# print(fieldpos_pred)\n",
     "# inv_pred = inv_onehot(fieldpos_pred).reshape(1,-1)[0]\n",
     "# print(inv_pred)\n",
-    "\n",
+    "val_pred_2 = model_2.predict(fieldpos_val_data[0])\n",
+    "print(val_pred_2)\n",
     "#accuracy_score(inv_pred,fieldpos_val_data[1])\n",
-    "print(model_2)\n",
-    "test_pred_2 = model_2.predict(fieldpos_test_data[0])\n",
-    "inv_test_pred_2 = inv_onehot(test_pred_2).reshape(1,-1)[0]\n"
+    "# print(model_2)\n",
+    "# test_pred_2 = model_2.predict(fieldpos_test_data[0])\n",
+    "# inv_test_pred_2 = inv_onehot(test_pred_2).reshape(1,-1)[0]\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -380,9 +389,7 @@
    "source": [
     "\n",
     "final_table = pd.DataFrame.from_dict(generate_final_table(fixtures, inv_test_pred,380), orient = 'index')\n",
-    "final_table \n",
-    "\n",
-    "\n"
+    "final_table \n"
    ]
   },
   {
@@ -396,26 +403,27 @@
     "    count = 0\n",
     "    home_wins = 0\n",
     "    final_pred = []\n",
-    "    for i in range(0,len(fieldpos_test_data[1])):\n",
+    "    for i in range(0,len(feats_pred)):\n",
     "        #print(fieldpos_test_data[1][i],feats_pred[i], fieldpos_pred[i], [(feats_pred[i][0] +   fieldpos_pred[i][0])/2,  (feats_pred[i][1] + fieldpos_pred[i][1])/2,  (feats_pred[i][2] + fieldpos_pred[i][2])/2])\n",
     "        \n",
-    "        final_pred.append((feats_pred[i][0] +   fieldpos_pred[i][0])/2,  (feats_pred[i][1] + fieldpos_pred[i][1])/2,  (feats_pred[i][2] + fieldpos_pred[i][2])/2)\n",
+    "        final_pred.append([(feats_pred[i][0] +   fieldpos_pred[i][0])/2,  (feats_pred[i][1] + fieldpos_pred[i][1])/2,  (feats_pred[i][2] + fieldpos_pred[i][2])/2])\n",
     "        #a = [(feats_pred[i][0] +  fieldpos_pred[i][0])/2,  (feats_pred[i][1] + fieldpos_pred[i][1])/2,  (feats_pred[i][2] + fieldpos_pred[i][2])/2]\n",
     "        #a = [feats_pred[i][0],  feats_pred[i][1],  feats_pred[i][2] ]\n",
     "        #a = [fieldpos_pred[i][0],  fieldpos_pred[i][1],  fieldpos_pred[i][2] ]\n",
     "\n",
-    "        m = max(a)\n",
-    "        it = a.index(m) + 1\n",
-    "        #predict vs actual\n",
-    "        if it == fieldpos_test_data[1][i]:\n",
-    "            times = times + 1\n",
-    "            if it == 1 or it == 3:\n",
-    "                home_wins +=1\n",
+    "#         m = max(a)\n",
+    "#         it = a.index(m) + 1\n",
+    "#         #predict vs actual\n",
+    "#         if it == fieldpos_test_data[1][i]:\n",
+    "#             times = times + 1\n",
+    "#             if it == 1 or it == 3:\n",
+    "#                 home_wins +=1\n",
     "\n",
-    "        count = count + 1\n",
+    "#         count = count + 1\n",
     "#     print(times, count)\n",
     "#     print(times/count)\n",
-    "#     print(home_wins/count)\n"
+    "#     print(home_wins/count\n",
+    "    return final_pred\n"
    ]
   },
   {
@@ -424,7 +432,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ensemble_combine(feats_pred,fieldpos_pred)"
+    "from keras.metrics import binary_crossentropy\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "\n",
+    "combined = ensemble_combine(val_pred,val_pred_2)\n",
+    "\n",
+    "#binary_crossentropy(np.array(feats_val_data[1]),inv_onehot(combined).reshape(1,-1)[0])"
    ]
   },
   {
@@ -432,7 +445,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#print(inv_onehot(combined).reshape(1,-1)[0])\n",
+    "cm = confusion_matrix(feats_val_data[1],inv_onehot(combined).reshape(1,-1)[0])\n",
+    "\n",
+    "plot_confusion_matrix(cm, classes = [1,2,3])"
+   ]
   },
   {
    "cell_type": "code",
